--- a/src/components/shared/user-courses/user-course-card.scss
+++ b/src/components/shared/user-courses/user-course-card.scss
@@ -268,7 +268,7 @@
     .view-course-btn {
       width: 100%;
       height: 44px;
-      margin-top: 16px;
+      margin-top: 24px;
       a {
         width: 100%;
       }
